Adjusts quotes to use polish ones.

--- a/report/Report.tex
+++ b/report/Report.tex
@@ -6,8 +6,8 @@
 \usepackage{graphicx}
 
 \title{
-Sprawozdanie z Projektu BigData\\ 
-''Predykcja Cen Samochodów Używanych''
+``Sprawozdanie z Projektu BigData\\ 
+Predykcja Cen Samochodów Używanych''
 }
 \author{
     Mateusz Grzybek 240678\\
@@ -29,8 +29,8 @@ Sprawozdanie z Projektu BigData\\
     
     % Project information
     {\Large \textbf{
-        Sprawozdanie z Projektu BigData \\
-        "Predykcja Cen Samochodów Używanych" \\[0.2cm]
+        Sprawozdanie z Projektu BigData\\ 
+        „Predykcja Cen Samochodów Używanych” \\[0.2cm]
     }}
     \includegraphics[width=0.3\textwidth]{images/project_logo.png}
     {\\[0.3cm]}
