Adds table of contents.

--- a/report/Report.tex
+++ b/report/Report.tex
@@ -5,9 +5,12 @@
 \usepackage{titling}
 \usepackage{graphicx}
 
+% notes:
+% - In polish we write titles of projects, chapters, sections with only first letter of first word large
+
 \title{
-``Sprawozdanie z Projektu BigData\\ 
-Predykcja Cen Samochodów Używanych''
+``Sprawozdanie z projektu BigData\\ 
+Predykcja cen samochodów używanych''
 }
 \author{
     Mateusz Grzybek 240678\\
@@ -29,8 +32,8 @@ Predykcja Cen Samochodów Używanych''
     
     % Project information
     {\Large \textbf{
-        Sprawozdanie z Projektu BigData\\ 
-        „Predykcja Cen Samochodów Używanych” \\[0.2cm]
+        Sprawozdanie z projektu BigData\\ 
+        „Predykcja cen samochodów używanych” \\[0.2cm]
     }}
     \includegraphics[width=0.3\textwidth]{images/project_logo.png}
     {\\[0.3cm]}
@@ -39,7 +42,11 @@ Predykcja Cen Samochodów Używanych''
 
     % Publication date
     {\Large \today}
-
 \end{titlepage}
+
+% Table of contents
+\tableofcontents
+\thispagestyle{empty}
+\newpage
 
 \end{document}
