Adds application views section in report.

--- a/report/Report.tex
+++ b/report/Report.tex
@@ -7,6 +7,7 @@
 \usepackage{lmodern}
 \usepackage[a4paper, margin=1in, top=0.5in, bottom=1in]{geometry}
 \usepackage{footnote}
+\usepackage{float}
 
 \setlength{\parindent}{1cm}
 \setlength{\parskip}{0cm}
@@ -91,5 +92,23 @@ middleware za pośrednictwem protokołu \textbf{HTTP}\footnote{HyperText Transfe
 \textbf{REST}\footnote{Representational State Transfer --- architektura komunikacji oparta o protokół HTTP
     definiujący sposoby identyfikacji i manipulacji zasobami za pomocą zapytań HTTP.}.\@
 \section{Widoki aplikacji}
+\subsection{Strona}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{images/page_view}
+    \caption{Widok strony}
+\end{figure}
+\subsection{Okno z ceną}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{images/price_view}
+    \caption{Widok okna z ceną}
+\end{figure}
+\subsection{Okno z błędem}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{images/error_view}
+    \caption{Widok okna z błędem}
+\end{figure}
 
 \end{document}
