--- a/report/Report.tex
+++ b/report/Report.tex
@@ -111,4 +111,16 @@ middleware za pośrednictwem protokołu \textbf{HTTP}\footnote{HyperText Transfe
     \caption{Widok okna z błędem}
 \end{figure}
 
+\chapter{Komponent pośredniczący}
+\section{Opis}
+Komponent pośrediczący pełni rolę pośrednika pomiędzy aplikacją kliencką i serwisem predykcyjnym.
+Otrzymywane od \textbf{frontendu}\footnote{Część aplikacji, z którą użytkownik wchodzi w bezpośednią interakcję, w tym wszystko co widzi oraz elementy wizualne i interaktywne.}
+dane w formie \textbf{JSON}\footnote{JavaScript Object Notation --- format danych zapewniający kompaktowe rozmiary i jest czytelny dla ludzi i maszyn.}
+są w tym komponencie przetwarzane na wiadomości w formacie odpowiadającym wejściu modelu, z uwzględnieniem procesu \textbf{kodowania liczbowego}\footnote{
+Technika zamiany wartości danych tekstowych na wartości liczbowe, poprzez przypisanie unikalnej liczby każdej unikalnej wartości tekstowej.
+} pól. Otrzymane
+w tym procesie wiadomości zapisywane są na temat wejściowy Kafki. Pośrednik jest również odpowiedzialny za odczytywanie danych z tematu wyjściowego i
+przekazywanie uzyskanych z nich informacji do klienta.
 \end{document}
+
+\chapter{}
