Adds use case diagram.

--- a/report/Report.tex
+++ b/report/Report.tex
@@ -138,4 +138,12 @@ wiadomości Apache Kafka wraz z dwoma tematami input oraz output, wykorzystywany
 odpowiednio do gromadzenia danych odczytywanych przez serwis predykcyjny i gromadzenia danych odczytywanych przez pośrednika.
 Do zarządzania brokerem wykorzystywany jest Apache Zookeeper.
 
+\chapter{Diagramy}
+\section{Diagram przypadków użycia}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{diagrams/use_case_diagram.png}
+    \caption{Przebieg interakcji użytkownika z aplikacją}
+\end{figure}
+\section{Diagram sekwencji zdarzeń}
 \end{document}
