Adds sequence diagram.

--- a/report/Report.tex
+++ b/report/Report.tex
@@ -92,7 +92,11 @@ natomiast dla komponentu komunikacyjnego wykorzystano gotowe obrazy Apache Kafka
     \caption{Przebieg interakcji użytkownika z aplikacją}
 \end{figure}
 \section{Diagram sekwencji zdarzeń}
-
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{diagrams/sequence_of_events_diagram.png}
+    \caption{Przebieg operacji komponentów i działań użytkownika podczas procesu predykcji ceny samochodu}
+\end{figure}
 % chapter 3 - frontend
 \chapter{Aplikacja kliencka}
 \section{Opis}
